unpackaged/main/default/objects/ETT_Test_Tyre__c/ETT_Test_Tyre__c.object-meta.xml
<CustomObject>
    <label>Test Tyre</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Tyres</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>