unpackaged/main/default/objects/ETT_Test_Tyre__c/fields/ETT_Application__c.field-meta.xml
<CustomField>
    <fullName>ETT_Application__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Application</label>
    <length>255</length>
    <type>Text</type>
</CustomField>