unpackaged/main/default/objects/ETT_Test_Tyre__c/fields/ETT_Condition__c.field-meta.xml
<CustomField>
    <fullName>ETT_Condition__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>