unpackaged/main/default/objects/ETT_Test_Tyre__c/fields/ETT_Hot__c.field-meta.xml
<CustomField>
    <fullName>ETT_Hot__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hot</label>
    <type>Checkbox</type>
</CustomField>