unpackaged/main/default/objects/ETT_Test_Tyre__c/fields/ETT_Inspection_Date__c.field-meta.xml
<CustomField>
    <fullName>ETT_Inspection_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Inspection Date</label>
    <type>Date</type>
</CustomField>