unpackaged/main/default/objects/ETT_Test_Tyre__c/fields/ETT_Internal_Number__c.field-meta.xml
<CustomField>
    <fullName>ETT_Internal_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Internal Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>