unpackaged/main/default/objects/ETT_Test_Tyre__c/fields/ETT_Load_Capacity__c.field-meta.xml
<CustomField>
    <fullName>ETT_Load_Capacity__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Load Capacity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>