unpackaged/main/default/objects/ETT_Test_Tyre__c/fields/ETT_Model__c.field-meta.xml
<CustomField>
    <fullName>ETT_Model__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>