unpackaged/main/default/objects/ETT_Test_Tyre__c/fields/ETT_Remaining_Tread_Depth_3__c.field-meta.xml
<CustomField>
    <fullName>ETT_Remaining_Tread_Depth_3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Remaining Tread Depth 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>