unpackaged/main/default/objects/ETT_Test_Tyre__c/fields/ETT_RTD__c.field-meta.xml
<CustomField>
    <fullName>ETT_RTD__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RTD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>