unpackaged/main/default/objects/ETT_Test_Tyre__c/fields/ETT_Tread_Depth__c.field-meta.xml
<CustomField>
    <fullName>ETT_Tread_Depth__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tread Depth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>