unpackaged/main/default/objects/ETT_Test_Tyre__c/fields/ETT_Vehicle_Configuration__c.field-meta.xml
<CustomField>
    <fullName>ETT_Vehicle_Configuration__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Configuration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>